--- a/src/html/delivery.html
+++ b/src/html/delivery.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../../pug/delivery.pug"></template>
+<template data-type="pug" data-src="../pug/delivery.pug"></template>
