--- a/src/html/designer.html
+++ b/src/html/designer.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../../pug/designer.pug"></template>
+<template data-type="pug" data-src="../pug/designer.pug"></template>
