--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../../pug/index.pug"></template>
+<template data-type="pug" data-src="../pug/index.pug"></template>
