--- a/src/html/payment.html
+++ b/src/html/payment.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../../pug/payment.pug"></template>
+<template data-type="pug" data-src="../pug/payment.pug"></template>
