--- a/src/html/services.html
+++ b/src/html/services.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../../pug/services.pug"></template>
+<template data-type="pug" data-src="../pug/services.pug"></template>
