--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../../pug/signin.pug"></template>
+<template data-type="pug" data-src="../pug/signin.pug"></template>
