--- a/src/html/checkout.html
+++ b/src/html/checkout.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../pug/checkout.pug"></template>
+<template data-type="pug" data-src="src/pug/checkout.pug"></template>
