--- a/src/html/our-works.html
+++ b/src/html/our-works.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../pug/our-works.pug"></template>
+<template data-type="pug" data-src="src/pug/our-works.pug"></template>
