--- a/src/html/price.html
+++ b/src/html/price.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../pug/price.pug"></template>
+<template data-type="pug" data-src="src/pug/price.pug"></template>
