--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../pug/signup.pug"></template>
+<template data-type="pug" data-src="src/pug/signup.pug"></template>
