--- a/src/html/taxonomy.html
+++ b/src/html/taxonomy.html
@@ -1,1 +1,1 @@
-<template data-type="pug" data-src="../pug/taxonomy.pug"></template>
+<template data-type="pug" data-src="src/pug/taxonomy.pug"></template>
